data-git/worldmodel/test/requirement-test-derived-predicates.p.pddl
(define
 (problem REQUIREMENT-TEST-DERIVED-PREDICATES)
 (:domain REQUIREMENT-TEST-DERIVED-PREDICATES)
 (:objects obj2 obj1 - type1)
 (:init
  (pred1 obj1))
 (:goal
  (and
   (pred1 obj2))))